button on iphone5 fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -107,7 +107,7 @@ ol, ul {list-style: none;}
         button{
             background: none;
             border: none;
-            height: 30px;
+            height: 50px;
 
                 span{
                     display: block;
@@ -161,7 +161,7 @@ ol, ul {list-style: none;}
     }
     
     .menu_open{
-        margin-top: 260px;
+        margin-top: 270px;
         transition: all 1s;
     }
 }
